--- a/templates/projects/index.html
+++ b/templates/projects/index.html
@@ -75,9 +75,9 @@
                                 </span>
                             </td>
                             {% if current_user.role in ['admin', 'sub-admin'] %}
-                            <td>{{ "{:,.2f}".format(project.total_contract_cost) }}</td>
+                            <td class="text-end">{{ "{:,.2f}".format(project.total_contract_cost) }}</td>
                             {% endif %}
-                            <td>{{ "{:,.2f}".format(project.total_actual_cost) }}</td>
+                            <td class="text-end">{{ "{:,.2f}".format(project.total_actual_cost) }}</td>
                             <td>
                                 <span class="text-info">{{ "{:,.2f}".format(project.total_paid_amount) }}</span>
                             </td>
