--- a/templates/payments/index.html
+++ b/templates/payments/index.html
@@ -71,7 +71,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        {% for payment in payments %}
+                        {% for payment in payments_data %}
                         <tr>
                             <td>{{ payment.id }}</td>
                             <td>{{ payment.payment_date.strftime('%Y-%m-%d') }}</td>
@@ -86,22 +86,23 @@
                                 </a>
                             </td>
                             <td class="text-center">
-                                {% if payment.distributions %}
-                                    <button type="button" 
-                                            class="btn btn-sm btn-info view-payment-items-btn" 
-                                            data-bs-toggle="modal" 
-                                            data-bs-target="#paymentItemsModal"
-                                            data-payment-id="{{ payment.id }}"
-                                            data-payment-amount="{{ '%.2f'|format(payment.amount) }}"
-                                            data-payment-date="{{ payment.payment_date.strftime('%Y-%m-%d') }}"
-                                            data-payment-description="{{ payment.description or '-' }}"
-                                            data-distributions="{{ payment.distributions | tojson }}">
-                                        <i class="fas fa-search"></i>
-                                    </button>
-                                {% else %}
-                                    -
-                                {% endif %}
-                            </td>
+								{% set payment_data = payments_data[loop.index0] %}
+								{% if payment_data.distributions %}
+									<button type="button" 
+											class="btn btn-sm btn-info view-payment-items-btn" 
+											data-bs-toggle="modal" 
+											data-bs-target="#paymentItemsModal"
+											data-payment-id="{{ payment_data.id }}"
+											data-payment-amount="{{ '%.2f'|format(payment_data.amount) }}"
+											data-payment-date="{{ payment_data.payment_date }}"
+											data-payment-description="{{ payment_data.description or '-' }}"
+											data-distributions="{{ payment_data.distributions | tojson }}">
+										<i class="fas fa-search"></i>
+									</button>
+								{% else %}
+									-
+								{% endif %}
+							</td>
                         </tr>
                         {% endfor %}
                     </tbody>
