--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -15,7 +15,7 @@
     
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}?v=1.4">
 </head>
-<body data-bs-theme="dark">
+<body data-bs-theme="light">
 
     <div class="page-wrapper">
         <aside class="sidebar">
